# setuptools-rust

./: .bumpversion.cfg  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGES.rst  Cargo.toml  MANIFEST.in  README.md  README.rst  build-wheels.sh  mypy.ini  noxfile.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  python-publish.yml  release.yml
docs/: building_wheels.md  building_wheels.rst  conf.py  index.md  index.rst  reference.rst  requirements.txt  setuppy_tutorial.md
emscripten/: .gitignore  .ruff.toml  Makefile  _sysconfigdata__emscripten_wasm32-emscripten.py  get_emscripten_version.js  get_python_version.js  package-lock.json  package.json  runner.js
emscripten/interpreter/: main.c  pre.js  test.py
example/: Cargo.toml  README.rst  build-wheels.sh  setup.py
example/extensions/: Cargo.toml
example/extensions/src/: lib.rs
example/hello_rust/: __init__.py
example/src/: lib.rs
example_tomlgen/: .gitignore  README.rst  setup.cfg  setup.py
example_tomlgen/hello/: __init__.py
example_tomlgen/hello/english/: lib.rs
example_tomlgen/hello/french/: lib.rs
examples/data-files/: Cargo.toml  MANIFEST.in  noxfile.py  pyproject.toml
examples/data-files/tests/: test_lib.py
examples/generated-files/: Cargo.toml  MANIFEST.in  build.rs  noxfile.py  pyproject.toml
examples/generated-files/python/generated_files/: __init__.py
examples/generated-files/rust/: lib.rs
examples/generated-files/tests/: test_lib.py
examples/hello-world/: Cargo.toml  MANIFEST.in  noxfile.py  pyproject.toml  setup.py  tox.ini
examples/hello-world-pyprojecttoml/: Cargo.toml  MANIFEST.in
examples/hello-world-pyprojecttoml/python/hello_world/: sum_cli.py
examples/hello-world-script/: Cargo.toml  MANIFEST.in  noxfile.py  pyproject.toml  setup.py
examples/hello-world-setuppy/: Cargo.toml  noxfile.py  setup.py
examples/hello-world-setuppy/python/hello_world/: __init__.py
examples/hello-world-setuppy/rust/: lib.rs
examples/hello-world/python/hello_world/: __init__.py  sum_cli.py
examples/hello-world/rust/: lib.rs
examples/hello-world/tests/: test_hello_world.py
examples/html-py-ever/: .travis.yml  Cargo.toml  README.md  build-wheels.sh  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
examples/html-py-ever/.github/workflows/: upload.yml
examples/html-py-ever/ci/: setup_rust.sh
examples/html-py-ever/html_py_ever/: __init__.py
examples/html-py-ever/rust/: lib.rs  main.rs
examples/html-py-ever/src/: lib.rs
examples/html-py-ever/test/: run_all.py  test_parsing.py  test_selector.py
examples/html-py-ever/tests/: conftest.py  run_all.py  test_selector.py
examples/namespace_package/: Cargo.toml  Cross.toml  Dockerfile  MANIFEST.in  noxfile.py  pyproject.toml  setup.py  tox.ini
examples/namespace_package/rust/: lib.rs
examples/namespace_package/tests/: test_namespace_package.py
examples/rust_with_cffi/: Cargo.toml  MANIFEST.in  cffi_module.py  noxfile.py  pyproject.toml  setup.py  tests.py  tox.ini
examples/rust_with_cffi/rust/: lib.rs
examples/rust_with_cffi/tests/: test_rust_with_cffi.py
examples/tomlgen/: setup.cfg  setup.py  tox.ini
examples/universal2/: Cargo.toml  setup.py  tox.ini
examples/universal2/tests/: test_universal2.py
examples/universal2_abi3/: setup.py
html-py-ever/: Cargo.toml  README.md  build-wheels.sh  requirements-dev.txt  setup.py  tox.ini
html-py-ever/html_py_ever/: __init__.py
html-py-ever/src/: lib.rs  main.rs
html-py-ever/test/: monty-python.html  python.html  run_all.py  rust.html  test_parsing.py  test_selector.py
setuptools_rust/: __init__.py  _utils.py  build.py  build_ext.py  check.py  clean.py  command.py  extension.py  patch.py  rustc_info.py  setuptools_ext.py  test.py  tomlgen.py  utils.py  version.py
tests/: test_build.py  test_extension.py
