[metadata]
author_email = "martin.larralde@ens-paris-saclay.fr"

[tomlgen_rust]
create_workspace = true

[tomlgen_rust.dependencies]
pyo3 = { version = "*", features = ["extension-module"] }

[tomlgen_rust.dependencies.hello.english]
english-lint = "*"

[aliases]
build_rust = tomlgen_rust build_rust
