[metadata]
author_email = "martin.larralde@ens-paris-saclay.fr"
description = Example Python/Rust project with automatic Cargo.toml generation
long-description = file: README.rst

[options]
zip_safe = false

[tomlgen_rust]
create_workspace = true

[tomlgen_rust.dependencies]
pyo3 = { version = "0.11.1", features = ["extension-module"] }

[tomlgen_rust.dependencies.hello-english]
english-lint = "*"

[aliases]
build_rust = tomlgen_rust build_rust
clean_rust = tomlgen_rust clean_rust
build = tomlgen_rust build
clean = clean_rust clean
