[package]

name = "hello-world"
version = "0.0.1"
authors = ["James Salter <iteration@gmail.com>"]

[features]
python27-sys = ["cpython/python27-sys"]
python3-sys = ["cpython/python3-sys"]

[dependencies.cpython]
git = "https://github.com/dgrunwald/rust-cpython.git"
rev = "e644f24"
default-features = false

[lib]
name = "helloworld"
crate-type = ["cdylib"]
