[package]
name = "hello-world-script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release-lto]
inherits = "release"
lto = true

[[bin]]
name = "hello-world-script"
path = "rust/main.rs"
# See https://doc.rust-lang.org/cargo/reference/cargo-targets.html#binaries
#
# If [[bin]] is not specified, but the file ``src/main.rs`` exists,
# you can also rely on an implicit definition which will behave similarly to:
#
# [[bin]]
# name = <package.name>
# path = "src/main.rs"
