[package]
name = "hello-world-setuppy"
version = "0.1.0"
edition = "2018"

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = "0.20.0"

[lib]
# See https://github.com/PyO3/pyo3 for details
name = "_lib"  # private module to be nested into Python package
path = "rust/lib.rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
