[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = "0.20.3"

[profile.release-lto]
inherits = "release"
lto = true

[lib]
# See https://github.com/PyO3/pyo3 for details
name = "_lib"  # private module to be nested into Python package
crate-type = ["cdylib"]
path = "rust/lib.rs"

[[bin]]
name = "print-hello"
path = "rust/print_hello.rs"
