[package]
name = "html-py-ever"
version = "0.1.0"
authors = ["konstin <konstin@mailbox.org>"]
edition = "2021"

[dependencies]
kuchiki = "0.8.0"
pyo3 = "0.20.3"
tendril = "0.4.3"

[lib]
name = "html_py_ever"
crate-type = ["cdylib"]
path = "rust/lib.rs"

[[bin]]
name = "html-py-ever"
path = "rust/main.rs"
