[metadata]
name = html-py-ever
version = 0.1.0
license = MIT
url = https://github.com/PyO3/setuptools-rust/blob/main/examples/html-py-ever
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 5 - Production/Stable
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows

[options]
packages = html_py_ever
zip_safe = False
setup_requires = setuptools-rust >= 0.12.1;
python_requires = >=3.6
include_package_data = True
